Fix taskbar item size
Fixed taskbar items increasing the size of the bar.
This will likely still be broken on some themes, I'm hoping that by adding both margin and padding it wont.

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@
 
 #sysbar .module_taskbar flowboxchild {
 	color: alpha(@theme_fg_color, 0.75);
+	margin: 0px;
+	padding: 0px;
 }
 #sysbar .module_taskbar flowboxchild:selected {
 	background: alpha(@theme_fg_color, 0.1);
